fix(dashboard): align fake data generation with system hour

--- a/frontend/src/components/ChartsStructurePage/ChartsPage_SideBar/ChartsPage_SideBar.module.css
+++ b/frontend/src/components/ChartsStructurePage/ChartsPage_SideBar/ChartsPage_SideBar.module.css
@@ -255,16 +255,15 @@
 }
 
 .avatar {
-  width: 36px;
-  height: 36px;
-  border-radius: 50%;
+  width: 26px;
+  height: 26px;
   object-fit: cover;
-  border: 2px solid #ccc;
 }
 
 .profileName {
   font-size: 0.9rem;
   font-weight: bold;
+  margin-right: -10%;
   color: #fff;
 }
 
@@ -288,9 +287,8 @@
 }
 
 .logoutIcon {
-  width: 22px;
-  height: 22px;
-  margin-right: 2.5%;
+  width: 20px;
+  height: 20px;
   margin-bottom: 2%;
   object-fit: contain;
 }
